worked with sections why, calculate

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
               <div class="swiper__box">
                 <h2 class="swiper__title swiper-title">Прямое КАРГО из Китая</h2>
                 <p class="swiper__text">Доставляем любые грузы из Китая по честной цене</p>
-                <button class="swiper__btn btn">Рассчитать стоимость</button>
+                <button class="swiper__btn btn btn-arrow">Рассчитать стоимость</button>
               </div>
             </div>
           </li>
@@ -83,7 +83,7 @@
               <div class="swiper__box">
                 <h2 class="swiper__title swiper-title">Гарантируем сроки!</h2>
                 <p class="swiper__text">Если мы не уложимся в обозначенные сроки, доставка груза со скидкой до 90%</p>
-                <button class="swiper__btn btn">Рассчитать стоимость</button>
+                <button class="swiper__btn btn btn-arrow">Рассчитать стоимость</button>
               </div>
             </div>
           </li>
@@ -92,7 +92,7 @@
               <div class="swiper__box">
                 <h2 class="swiper__title swiper-title">Выкуп товара с ТаоБао, 1688</h2>
                 <p class="swiper__text">Выкуп и доставка товаров с китайских торговых площадок. </p>
-                <button class="swiper__btn btn">Рассчитать стоимость</button>
+                <button class="swiper__btn btn btn-arrow">Рассчитать стоимость</button>
               </div>
             </div>
           </li>
@@ -101,7 +101,7 @@
               <div class="swiper__box">
                 <h2 class="swiper__title swiper-title">Экспресс авто доставка</h2>
                 <p class="swiper__text">Доставка автотранспортом из Китая в Россию от 15 дней, от $0,5/кг</p>
-                <button class="swiper__btn btn">Рассчитать стоимость</button>
+                <button class="swiper__btn btn btn-arrow">Рассчитать стоимость</button>
               </div>
             </div>
           </li>
@@ -112,49 +112,59 @@
     <section class="calculate">
       <div class="container calculate__container">
         <h2 class="calculate__title title">Получить рассчет стоимости доставки вашего груза</h2>
+        <div class="calculate__wrap">
+          <div class="calculate__buttons">
+            <span class="calculate__num active">1</span>
+            <span class="calculate__num">2</span>
+            <span class="calculate__num">3</span>
+          </div>
+          <form class="calculate__form form">
+            <button class="form__btn btn btn-arrow">Следующий шаг</button>
+          </form>
+        </div>
       </div>
     </section>
     <section class="why">
       <div class="container why__container">
         <h2 class="why__title title">Почему стоит выбрать именно нас?</h2>
         <ul class="why__list">
-          <li class="why__item">
+          <li class="why__item why-item1">
             <div class="why__icons why1"></div>
             <p class="why__text">
               Таможенное оформление груза
             </p>
           </li>
-          <li class="why__item">
+          <li class="why__item why-item2">
             <div class="why__icons why2"></div>
             <p class="why__text">Страховка груза
             </p>
           </li>
-          <li class="why__item">
+          <li class="why__item why-item3">
             <div class="why__icons why3"></div>
             <p class="why__text">Проверка товара на брак
             </p>
           </li>
-          <li class="why__item">
+          <li class="why__item why-item4">
             <div class="why__icons why4"></div>
             <p class="why__text">Доставка в любой город РФ
             </p>
           </li>
-          <li class="why__item">
+          <li class="why__item why-item5">
             <div class="why__icons why5"></div>
             <p class="why__text">Консолидация на складе
             </p>
           </li>
-          <li class="why__item">
+          <li class="why__item why-item6">
             <div class="why__icons why6"></div>
             <p class="why__text">Ответственное хранение груза
             </p>
           </li>
-          <li class="why__item">
+          <li class="why__item why-item7">
             <div class="why__icons why7"></div>
             <p class="why__text">Помощь в оплате товара
             </p>
           </li>
-          <li class="why__item">
+          <li class="why__item why-item8">
             <div class="why__icons why8"></div>
             <p class="why__text">
               Упаковка, переупаковка, паллетирование груза к международной перевозке
