worked with section delivery

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,92 @@
         </ul>
       </div>
     </section>
-
+    <section class="delivery">
+      <div class="container delivery__container">
+        <h2 class="delivery__title title">Варианты доставки грузов из Китая</h2>
+        <div class="delivery__swiper swiper">
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+          <ul class="swiper-wrapper">
+            <li class="swiper-slide">
+              <img class="delivery__img" src="./images/delivery/delivery01.png" alt="" tabindex="-1">
+              <h3 class="delivery__subtitle">Авто - обычная</h3>
+              <div class="delivery__box">
+                <span class="delivery__time">9-15 дней</span>
+                <span class="delivery__weight">от 5 кг</span>
+              </div>
+              <div class="delivery__wrap">
+                <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
+              </div>
+              <div class="delivery__wrap-btns">
+                <button class="delivery__btn btn">Оставить заявку</button>
+                <button class="delivery__btn">Подробнее</button>
+              </div>
+            </li>
+            <li class="swiper-slide">
+              <img class="delivery__img" src="./images/delivery/delivery02.png" alt="" tabindex="-1">
+              <h3 class="delivery__subtitle">Авто - обычная</h3>
+              <div class="delivery__box">
+                <span class="delivery__time">9-15 дней</span>
+                <span class="delivery__weight">от 5 кг</span>
+              </div>
+              <div class="delivery__wrap">
+                <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
+              </div>
+              <div class="delivery__wrap-btns">
+                <button class="delivery__btn btn">Оставить заявку</button>
+                <button class="delivery__btn">Подробнее</button>
+              </div>
+            </li>
+            <li class="swiper-slide">
+              <img class="delivery__img" src="./images/delivery/delivery03.png" alt="" tabindex="-1">
+              <h3 class="delivery__subtitle">Авто - обычная</h3>
+              <div class="delivery__box">
+                <span class="delivery__time">9-15 дней</span>
+                <span class="delivery__weight">от 5 кг</span>
+              </div>
+              <div class="delivery__wrap">
+                <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
+              </div>
+              <div class="delivery__wrap-btns">
+                <button class="delivery__btn btn">Оставить заявку</button>
+                <button class="delivery__btn">Подробнее</button>
+              </div>
+            </li>
+            <li class="swiper-slide">
+              <img class="delivery__img" src="./images/delivery/delivery01.png" alt="" tabindex="-1">
+              <h3 class="delivery__subtitle">Авто - обычная</h3>
+              <div class="delivery__box">
+                <span class="delivery__time">9-15 дней</span>
+                <span class="delivery__weight">от 5 кг</span>
+              </div>
+              <div class="delivery__wrap">
+                <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
+              </div>
+              <div class="delivery__wrap-btns">
+                <button class="delivery__btn btn">Оставить заявку</button>
+                <button class="delivery__btn">Подробнее</button>
+              </div>
+            </li>
+            <li class="swiper-slide">
+              <img class="delivery__img" src="./images/delivery/delivery02.png" alt="" tabindex="-1">
+              <h3 class="delivery__subtitle">Авто - обычная</h3>
+              <div class="delivery__box">
+                <span class="delivery__time">9-15 дней</span>
+                <span class="delivery__weight">от 5 кг</span>
+              </div>
+              <div class="delivery__wrap">
+                <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
+              </div>
+              <div class="delivery__wrap-btns">
+                <button class="delivery__btn btn">Оставить заявку</button>
+                <button class="delivery__btn">Подробнее</button>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
   </main>
   <footer class="footer">
