--- a/src/index.html
+++ b/src/index.html
@@ -179,80 +179,80 @@
         <div class="delivery__swiper swiper">
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
-          <ul class="swiper-wrapper">
-            <li class="swiper-slide">
+          <ul class="delivery__list swiper-wrapper">
+            <li class="delivery__item swiper-slide">
               <img class="delivery__img" src="./images/delivery/delivery01.png" alt="" tabindex="-1">
               <h3 class="delivery__subtitle">Авто - обычная</h3>
               <div class="delivery__box">
-                <span class="delivery__time">9-15 дней</span>
-                <span class="delivery__weight">от 5 кг</span>
+                <span class="delivery__span delivery-time">9-15 дней</span>
+                <span class="delivery__span delivery-weight">от 5 кг</span>
               </div>
               <div class="delivery__wrap">
                 <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
               </div>
               <div class="delivery__wrap-btns">
                 <button class="delivery__btn btn">Оставить заявку</button>
-                <button class="delivery__btn">Подробнее</button>
+                <button class="delivery__btn btn-uncolor">Подробнее</button>
               </div>
             </li>
-            <li class="swiper-slide">
+            <li class="delivery__item swiper-slide">
               <img class="delivery__img" src="./images/delivery/delivery02.png" alt="" tabindex="-1">
               <h3 class="delivery__subtitle">Авто - обычная</h3>
               <div class="delivery__box">
-                <span class="delivery__time">9-15 дней</span>
-                <span class="delivery__weight">от 5 кг</span>
+                <span class="delivery__span delivery-time">9-15 дней</span>
+                <span class="delivery__span delivery-weight">от 5 кг</span>
               </div>
               <div class="delivery__wrap">
                 <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
               </div>
               <div class="delivery__wrap-btns">
                 <button class="delivery__btn btn">Оставить заявку</button>
-                <button class="delivery__btn">Подробнее</button>
+                <button class="delivery__btn btn-uncolor">Подробнее</button>
               </div>
             </li>
-            <li class="swiper-slide">
+            <li class="delivery__item swiper-slide">
               <img class="delivery__img" src="./images/delivery/delivery03.png" alt="" tabindex="-1">
               <h3 class="delivery__subtitle">Авто - обычная</h3>
               <div class="delivery__box">
-                <span class="delivery__time">9-15 дней</span>
-                <span class="delivery__weight">от 5 кг</span>
+                <span class="delivery__span delivery-time">9-15 дней</span>
+                <span class="delivery__span delivery-weight">от 5 кг</span>
               </div>
               <div class="delivery__wrap">
                 <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
               </div>
               <div class="delivery__wrap-btns">
                 <button class="delivery__btn btn">Оставить заявку</button>
-                <button class="delivery__btn">Подробнее</button>
+                <button class="delivery__btn btn-uncolor">Подробнее</button>
               </div>
             </li>
-            <li class="swiper-slide">
+            <li class="delivery__item swiper-slide">
               <img class="delivery__img" src="./images/delivery/delivery01.png" alt="" tabindex="-1">
               <h3 class="delivery__subtitle">Авто - обычная</h3>
               <div class="delivery__box">
-                <span class="delivery__time">9-15 дней</span>
-                <span class="delivery__weight">от 5 кг</span>
+                <span class="delivery__span delivery-time">9-15 дней</span>
+                <span class="delivery__span delivery-weight">от 5 кг</span>
               </div>
               <div class="delivery__wrap">
                 <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
               </div>
               <div class="delivery__wrap-btns">
                 <button class="delivery__btn btn">Оставить заявку</button>
-                <button class="delivery__btn">Подробнее</button>
+                <button class="delivery__btn btn-uncolor">Подробнее</button>
               </div>
             </li>
-            <li class="swiper-slide">
+            <li class="delivery__item swiper-slide">
               <img class="delivery__img" src="./images/delivery/delivery02.png" alt="" tabindex="-1">
               <h3 class="delivery__subtitle">Авто - обычная</h3>
               <div class="delivery__box">
-                <span class="delivery__time">9-15 дней</span>
-                <span class="delivery__weight">от 5 кг</span>
+                <span class="delivery__span delivery-time">9-15 дней</span>
+                <span class="delivery__span delivery-weight">от 5 кг</span>
               </div>
               <div class="delivery__wrap">
                 <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
               </div>
               <div class="delivery__wrap-btns">
                 <button class="delivery__btn btn">Оставить заявку</button>
-                <button class="delivery__btn">Подробнее</button>
+                <button class="delivery__btn btn-uncolor">Подробнее</button>
               </div>
             </li>
           </ul>
