worked with section services

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,7 @@
   <title>Master TAO cargo</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
   <link rel="apple-touch-icon" href="apple-touch-favicon.png">
-  <link
-  rel="stylesheet"
-  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
   <link rel="stylesheet" href="./styles/main.css">
@@ -188,7 +185,8 @@
                 <span class="delivery__span delivery-weight">от 5 кг</span>
               </div>
               <div class="delivery__wrap">
-                <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
+                <span class="delivery__text">от <span class="delivery__num">2,5</span><span
+                    class="delivery__currency">$/кг</span></span>
               </div>
               <div class="delivery__wrap-btns">
                 <button class="delivery__btn btn">Оставить заявку</button>
@@ -197,13 +195,14 @@
             </li>
             <li class="delivery__item swiper-slide">
               <img class="delivery__img" src="./images/delivery/delivery02.png" alt="" tabindex="-1">
-              <h3 class="delivery__subtitle">Авто - обычная</h3>
+              <h3 class="delivery__subtitle">Авто - ускоренная</h3>
               <div class="delivery__box">
                 <span class="delivery__span delivery-time">9-15 дней</span>
                 <span class="delivery__span delivery-weight">от 5 кг</span>
               </div>
               <div class="delivery__wrap">
-                <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
+                <span class="delivery__text">от <span class="delivery__num">2,5</span><span
+                    class="delivery__currency">$/кг</span></span>
               </div>
               <div class="delivery__wrap-btns">
                 <button class="delivery__btn btn">Оставить заявку</button>
@@ -212,13 +211,14 @@
             </li>
             <li class="delivery__item swiper-slide">
               <img class="delivery__img" src="./images/delivery/delivery03.png" alt="" tabindex="-1">
-              <h3 class="delivery__subtitle">Авто - обычная</h3>
+              <h3 class="delivery__subtitle">Авиа</h3>
               <div class="delivery__box">
                 <span class="delivery__span delivery-time">9-15 дней</span>
                 <span class="delivery__span delivery-weight">от 5 кг</span>
               </div>
               <div class="delivery__wrap">
-                <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
+                <span class="delivery__text">от <span class="delivery__num">2,5</span><span
+                    class="delivery__currency">$/кг</span></span>
               </div>
               <div class="delivery__wrap-btns">
                 <button class="delivery__btn btn">Оставить заявку</button>
@@ -226,14 +226,15 @@
               </div>
             </li>
             <li class="delivery__item swiper-slide">
-              <img class="delivery__img" src="./images/delivery/delivery01.png" alt="" tabindex="-1">
-              <h3 class="delivery__subtitle">Авто - обычная</h3>
+              <img class="delivery__img" src="./images/delivery/delivery04.png" alt="" tabindex="-1">
+              <h3 class="delivery__subtitle">Ж/д</h3>
               <div class="delivery__box">
                 <span class="delivery__span delivery-time">9-15 дней</span>
                 <span class="delivery__span delivery-weight">от 5 кг</span>
               </div>
               <div class="delivery__wrap">
-                <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
+                <span class="delivery__text">от <span class="delivery__num">2,5</span><span
+                    class="delivery__currency">$/кг</span></span>
               </div>
               <div class="delivery__wrap-btns">
                 <button class="delivery__btn btn">Оставить заявку</button>
@@ -241,20 +242,66 @@
               </div>
             </li>
             <li class="delivery__item swiper-slide">
-              <img class="delivery__img" src="./images/delivery/delivery02.png" alt="" tabindex="-1">
-              <h3 class="delivery__subtitle">Авто - обычная</h3>
+              <img class="delivery__img" src="./images/delivery/delivery05.png" alt="" tabindex="-1">
+              <h3 class="delivery__subtitle">Море</h3>
               <div class="delivery__box">
                 <span class="delivery__span delivery-time">9-15 дней</span>
                 <span class="delivery__span delivery-weight">от 5 кг</span>
               </div>
               <div class="delivery__wrap">
-                <span class="delivery__text">от <span class="delivery__num">2,5</span><span class="delivery__currency">$/кг</span></span>
+                <span class="delivery__text">от <span class="delivery__num">2,5</span><span
+                    class="delivery__currency">$/кг</span></span>
               </div>
               <div class="delivery__wrap-btns">
                 <button class="delivery__btn btn">Оставить заявку</button>
                 <button class="delivery__btn btn-uncolor">Подробнее</button>
               </div>
             </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="services">
+      <div class="container services__container">
+        <h2 class="services__title title">Услуги</h2>
+        <div class="services__swiper swiper">
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+          <ul class="services__list swiper-wrapper">
+            <li class="services__item swiper-slide services01">
+              <div class="services__wrap">
+                <h3 class="services__subtitle">Выкуп товара</h3>
+                <p class="services__text">Компания - это полный комплекс логистических услуг по доставке грузов из Китая
+                  в Россию - сборные грузы и цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-Россия. </p>
+                <button class="services__btn btn-uncolor">Подробнее</button>
+              </div>
+            </li>
+            <li class="services__item swiper-slide services02">
+              <div class="services__wrap">
+                <h3 class="services__subtitle">Страховка груза</h3>
+                <p class="services__text">Компания - это полный комплекс логистических услуг по доставке грузов из Китая
+                  в Россию - сборные грузы и цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-Россия. </p>
+                <button class="services__btn btn-uncolor">Подробнее</button>
+              </div>
+            </li>
+            <li class="services__item swiper-slide services03">
+              <div class="services__wrap">
+                <h3 class="services__subtitle">Аренда склада</h3>
+                <p class="services__text">Компания - это полный комплекс логистических услуг по доставке грузов из Китая
+                  в Россию - сборные грузы и цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-Россия. </p>
+                <button class="services__btn btn-uncolor">Подробнее</button>
+              </div>
+            </li>
+            <li class="services__item swiper-slide services04">
+              <div class="services__wrap">
+                <h3 class="services__subtitle">Перевод денежных средств</h3>
+                <p class="services__text">Компания - это полный комплекс логистических услуг по доставке грузов из Китая
+                  в Россию - сборные грузы и цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-Россия. </p>
+                <button class="services__btn btn-uncolor">Подробнее</button>
+              </div>
+            </li>
+
           </ul>
         </div>
       </div>
