worked with files

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,10 @@
         <div class="calculate__wrap">
           <div class="calculate__buttons">
             <span class="calculate__num active">1</span>
-            <span class="calculate__num">2</span>
+            <span class="calculate__num">
+              <span class="submit-spinner submit-spinner_hide"></span>
+              2
+            </span>
             <span class="calculate__num">3</span>
           </div>
           <form class="calculate__form form">
