--- a/src/index.html
+++ b/src/index.html
@@ -113,8 +113,11 @@
           <div class="calculate__buttons">
             <span class="calculate__num active">1</span>
             <span class="calculate__num">
-              <span class="submit-spinner submit-spinner_hide"></span>
+              <!-- <span class="submit-spinner submit-spinner_hide"></span> -->
               2
+              <svg>
+                <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+              </svg>
             </span>
             <span class="calculate__num">3</span>
           </div>
